<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout  xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"

    tools:context=".MainActivity">

           <LinearLayout
               android:orientation="vertical"
               android:layout_width="match_parent"
               android:layout_height="match_parent">

               <RelativeLayout
                   android:layout_marginTop="22dp"
                   android:layout_marginRight="20dp"
                   android:layout_marginLeft="17dp"
                   android:layout_width="match_parent"
                   android:layout_height="wrap_content">

                   <TextView
                       android:id="@+id/tophometext"
                       android:text="@string/welcometext"
                       android:textSize="20sp"
                       android:textColor="@color/colorPrimaryDark"
                       android:layout_width="wrap_content"
                       android:layout_height="wrap_content">

                   </TextView>
                   <TextView
                       android:id="@+id/subtitle"
                       android:layout_below="@+id/tophometext"
                       android:text="@string/welcome"
                       android:textSize="14sp"
                       android:textColor="@color/colorPrimary"
                       android:layout_width="wrap_content"
                       android:layout_height="wrap_content">

                   </TextView>

                   <ImageView


                       android:layout_alignParentRight="true"
                       android:src="@drawable/personalinfo"
                       android:layout_width="47dp"
                       android:layout_height="47dp">

                   </ImageView>
                   <TextView
                       android:layout_below="@id/subtitle"
                       android:layout_marginTop="50dp"
                       android:textAlignment="center"
                       android:textColor="@color/colorPrimaryDark"
                       android:layout_centerInParent="true"
                       style="@style/CardView"
                       android:id="@+id/maintext"
                       android:text="@string/fronttext"
                       android:textSize="14dp"
                       android:layout_width="match_parent"
                       android:layout_height="wrap_content">

                   </TextView>

                   <Button
                       android:id="@+id/btnregister"
                       android:layout_below="@id/maintext"
                       android:layout_marginTop="40dp"
                       android:layout_marginLeft="24dp"
                       android:layout_marginRight="24dp"
                       style="@style/CardView"
                       android:textSize="15dp"
                       android:background="@drawable/buttonstyle"
                       android:text="@string/btnTextRegister"
                       android:textColor="@color/colorwhite"
                       android:textStyle="bold"
                       android:layout_width="match_parent"
                       android:layout_height="wrap_content">

                   </Button>
                   <Button
                       android:background="@drawable/buttonstyle"
                       android:id="@+id/btnlogin"
                       android:layout_below="@id/btnregister"
                       android:layout_marginTop="30dp"
                       style="@style/CardView"
                       android:textSize="15dp"
                       android:textStyle="bold"
                       android:layout_marginLeft="24dp"
                       android:layout_marginRight="24dp"

                       android:text="@string/btntextLogin"

                       android:textColor="@color/colorwhite"
                       android:layout_width="match_parent"
                       android:layout_height="wrap_content">



                   </Button>

               </RelativeLayout>


           </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>